<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#201F1F">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="32dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sports_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.124"
            app:srcCompat="@drawable/ic_round_sports_cricket_24" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:contentDescription="@string/economy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton4"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            app:srcCompat="@drawable/ic_round_attach_money_24" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/politics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            app:srcCompat="@drawable/ic_baseline_account_balance_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_2"
            android:textColor="#FFFEFE"

            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/entertainment"
            android:textColor="#FFFEFE"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFEFE"
            android:text="@string/technology"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFEFE"

            android:text="@string/food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFEFE"

            android:text="@string/economy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:textColor="#FFFEFE"

            android:layout_height="wrap_content"
            android:text="@string/politics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:contentDescription="@string/entertainment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
            app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.185"
            app:srcCompat="@drawable/ic_round_movie_filter_24" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="98dp"
            android:contentDescription="@string/technology"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_outline_memory_24" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:contentDescription="@string/food"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toEndOf="@+id/imageButton6"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4"
            app:layout_constraintVertical_bias="0.185"
            app:srcCompat="@drawable/ic_round_fastfood_24" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="@dimen/layout_width_large"
            android:layout_height="@dimen/layout_height_large"
            android:contentDescription="@string/feed"
            app:layout_constraintBottom_toTopOf="@+id/imageButton12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/ic_round_rss_feed_24" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:contentDescription="@string/premium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/crown_resized" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:textColor="#FFFEFE"

            android:layout_height="wrap_content"
            android:text="@string/feed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:textColor="#FFFEFE"

            android:layout_height="wrap_content"
            android:text="@string/premium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>